Rename module from libhdfs3py to libhdfs3

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [versioneer]
 VCS = git
 style = pep440
-versionfile_source = libhdfs3py/_version.py
-versionfile_build = libhdfs3py/_version.py
+versionfile_source = libhdfs3/_version.py
+versionfile_build = libhdfs3/_version.py
 tag_prefix =
-parentdir_prefix = libhdfs3py-
+parentdir_prefix = libhdfs3-
