Add pywebhdfs for benchmarks

--- a/Dockerfile.hdfs
+++ b/Dockerfile.hdfs
@@ -20,7 +20,7 @@ ENV LD_LIBRARY_PATH /usr/local/lib:$LD_LIBRARY_PATH
 
 # libhdfs3.py
 RUN /opt/conda/bin/conda install -y -q ipython cython
-RUN /opt/conda/bin/pip install versioneer
+RUN /opt/conda/bin/pip install versioneer pywebhdfs
 
 # Cloudera repositories
 RUN curl -s http://archive.cloudera.com/cdh5/ubuntu/trusty/amd64/cdh/archive.key | apt-key add -
