--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [versioneer]
 VCS = git
 style = pep440
-versionfile_source = libhdfs3/_version.py
-versionfile_build = libhdfs3/_version.py
+versionfile_source = cyhdfs3/_version.py
+versionfile_build = cyhdfs3/_version.py
 tag_prefix =
-parentdir_prefix = libhdfs3-
+parentdir_prefix = cyhdfs3-
