--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,3 +2,5 @@ include LICENSE
 include requirements.txt
 include versioneer.py
 include cyhdfs3/_version.py
+include cyhdfs3/*.pyx
+include cyhdfs3/*.pxd
