--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ before_install:
   - pushd ../
   - git clone https://github.com/danielfrg/cyavro.git
   - popd
+  - docker build -t cyhdfs3 .
   - docker build -t cyhdfs3.hdfs -f Dockerfile.hdfs .
   - docker run -it -p 8020:8020 -p 50070:50070 -v $(pwd):/cyhdfs3 -v $(pwd)/../cyavro:/cyavro cyhdfs3.hdfs
   - export CONTAINER_ID=$(docker ps -l -q)
