--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_install:
   - popd
   - docker build -t cyhdfs3 .
   - docker build -t cyhdfs3.hdfs -f Dockerfile.hdfs .
-  - docker run -it -p 8020:8020 -p 50070:50070 -v $(pwd):/cyhdfs3 -v $(pwd)/../cyavro:/cyavro cyhdfs3.hdfs
+  - docker run -d -p 8020:8020 -p 50070:50070 -v $(pwd):/cyhdfs3 -v $(pwd)/../cyavro:/cyavro cyhdfs3.hdfs
   - export CONTAINER_ID=$(docker ps -l -q)
   - sleep 60  # Wait for namenode and datanode
 
